Fixed piano spacing

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -125,18 +125,20 @@
   .piano-key {
     border-radius: 100vw;
     height: 100%;
-    width: 10.24%;
-    margin-right: 1.13%;
-    margin-left: 1.13%;
+    width: 12.28%;
+    margin-right: 1%;
+    margin-left: 1%;
   }
 
   .white-key {
     background-color: white;
-    border: 2px black solid;
+    box-shadow:0 0 0 2px white inset;
+    /*outline: 2px black solid;*/
   }
 
   .black-key {
-    border: 2px white solid;
+    /*border: 2px white solid;*/
+    box-shadow:0 0 0 2px white inset;
     background-color: black;
   }
 
